feat: align baseline to Java 17 and refresh release docs